@@ -19,7 +19,7 @@
 // for struct tm
 #include <time.h>
 
-#define MAX_ITEM_BUFFER_SIZE 4096
+#define MAX_ITEM_BUFFER_SIZE 32768
 #define MAX_SELECT_LIST_SIZE 256
 #define MAX_BIND_VARS 512
 #define MAX_LOB_CHUNK_SIZE 65535
